# rift

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  devbox.json  rift.default.toml  rustfmt.toml
src/: actor.rs  ipc.rs  layout_engine.rs  ui.rs
src/actor/: app.rs  config.rs  config_watcher.rs  drag_swap.rs  event_tap.rs  menu_bar.rs  mission_control_observer.rs  notification_center.rs  process.rs  raise_manager.rs  reactor.rs  stack_line.rs  window_notify.rs  wm_controller.rs
src/actor/reactor/: animation.rs  error.rs  main_window.rs  managers.rs  query.rs  replay.rs  testing.rs  tests.rs  transaction_manager.rs  utils.rs
src/actor/reactor/events/: app.rs  command.rs  space.rs  system.rs  window.rs  window_discovery.rs
src/common/: config.rs  util.rs
src/ipc/: cli_exec.rs  subscriptions.rs
src/layout_engine/: engine.rs  floating.rs  graph.rs  systems.rs  tests.rs  workspaces.rs
src/layout_engine/systems/: bsp.rs  dwindle.rs  traditional.rs
src/model/: selection.rs  tree.rs  tx_store.rs  virtual_workspace.rs
src/sys/: app.rs  axuielement.rs  carbon.rs  cgs_window.rs  dispatch.rs  display_link.rs  enhanced_ui.rs  event.rs  event_tap.rs  executor.rs  geometry.rs  haptics.rs  hotkey.rs  mach.rs  observer.rs  power.rs  process.rs  screen.rs  service.rs  skylight.rs  timer.rs  window_notify.rs  window_server.rs
src/ui/: border.rs  menu_bar.rs  mission_control.rs  stack_line.rs
