[package]
name = "rift-wm"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "rift"
test = false

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 16
debug-assertions = true
overflow-checks = true
split-debuginfo = "packed"
panic = "unwind"

[profile.release]
debug = 1
codegen-units = 1
panic = "abort"
incremental = true

[lib]
doctest = false

[dependencies]
anyhow = { version = "1.0.83", default-features = false }
ascii_tree = "0.1.1"
thiserror = { version = "2.0.17", default-features = false }
bitflags = "2.4.1"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "6.0.0"
dispatchr = { git = "https://github.com/drewcrawford/dispatchr" }
nix = { version = "0.30.1", features = ["process", "user"] }
objc2 = { version = "0.6.2", default-features = false }
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
	"NSAppearance",
	"NSApplication",
	"NSAttributedString",
	"NSButton",
	"NSColor",
	"NSControl",
	"NSEvent",
	"NSFont",
	"NSGraphics",
	"NSGraphicsContext",
	"NSImage",
	"NSMenu",
	"NSMenuItem",
	"NSStringDrawing",
	"NSResponder",
	"NSRunningApplication",
	"NSScreen",
	"NSStatusBar",
	"NSStatusBarButton",
	"NSStatusItem",
	"NSTouch",
	"NSView",
	"NSWindow",
	"NSWorkspace",
	"libc",
	"objc2-core-foundation",
	"objc2-core-graphics",
	"objc2-quartz-core"
]}
objc2-application-services = { version = "0.3.2", default-features = false, features = [
	"AXError",
	"AXUIElement",
	"AXValue",
	"HIServices",
	"libc"
]}
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
	"CFArray",
	"CFAttributedString",
	"CFMachPort",
	"CFNumber",
	"CFRunLoop",
	"CFString"
]}
objc2-core-text = { version = "0.3.2", default-features = false, features = [
	"CTLine",
	"objc2-core-graphics"
]}
objc2-core-graphics = { version = "0.3.1", default-features = false, features = [
	"CGColor",
	"CGDirectDisplay",
	"CGError",
	"CGEvent",
	"CGEventTypes",
	"CGWindow",
	"objc2"
]}
objc2-foundation = { version = "0.3.1", default-features = false, features = [
	"NSArray",
	"NSEnumerator",
	"NSAttributedString",
	"NSString",
	"NSKeyValueCoding",
	"NSNotification",
	"NSProcessInfo",
	"NSValue"
]}
objc2-quartz-core = { version = "0.3.0", default-features = false, features = [
	"CAAnimation",
	"CABase",
	"CAEAGLLayer",
	"CAEDRMetadata",
	"CAGradientLayer",
	"CAMediaTimingFunction",
	"CAOpenGLLayer",
	"CARenderer",
	"CATextLayer",
	"CATransaction",
	"objc2-core-foundation",
	"objc2-core-graphics",
	"objc2-metal"
]}
once_cell = { version = "1.21.3", default-features = false }
parking_lot = "0.12"
ron = "0.11.0"
serde = { version = "1.0.201", default-features = false }
serde_json = "1.0.145"
serde_with = "3.9.0"
slotmap = { version = "1.0.7", features = ["serde"], default-features = false }
static_assertions = "1.1.0"
tokio = { version = "1.35.1", features = ["libc", "macros"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.15"
toml = { version = "0.9.2", features = ["display", "parse", "serde"], default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "tracing", "env-filter"], default-features = false }
tracing-timing = "0.7.0"
tracing-tree = { version = "0.4.0", features = ["time"], default-features = false }
continue = { git = "https://github.com/drewcrawford/continue" }
futures-task = { version = "0.3.31", features = ["alloc"], default-features = false }
regex = "1.11.0"
enum_dispatch = "0.3.13"
crossbeam-channel = "0.5"
num_enum = "0.7.4"
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
strum_macros = "0.27.2"
notify = { version = "8.2.0", default-features = false }
notify-debouncer-mini = { version = "0.7.0", default-features = false }
dashmap = "6.1.0"
sigpipe = "0.1.3"
ctrlc = "3.5.1"
embed_plist = "1.2.2"
rustc-hash = "2.1.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.35.1", features = ["sync", "tokio-macros"] }
test-log = { version = "0.2.16", default-features = false }
test_bin = "0.5.0"
tempfile = { version = "3.17.1", default-features = false }
